Migrate domain models to official A2A Java SDK